:rocket:add 5 models

--- a/webserver/阻塞非阻塞同步异步.md
+++ b/webserver/阻塞非阻塞同步异步.md
@@ -12,6 +12,7 @@
    4.在处理 IO 的时候，阻塞和非阻塞都是同步 IO，只有使用了特殊的 API 才是异步 IO
    5.异步和非阻塞结合
    6.Linux中的异步IO接口API：aio_read(),aio_write()。
+   7.阻塞非阻塞不是针对函数的，而是针对文件描述符的
 ```
 ```
 一个典型的网络IO接口调用，分为两个阶段，分别是“数据就绪” 和 “数据读写”，数据就绪阶段分为阻塞和非阻塞，表现得结果就是，阻塞当前线程或是直接返回。
