--- a/webserver/线程池.md
+++ b/webserver/线程池.md
@@ -10,3 +10,5 @@
 4. 当服务器处理完一个客户连接后，可以把相关的资源放回池中，无需执行系统调用释放资源
 5. 可以根据需要动态控制线程池的线程数量
 ```
+## 线程安全
+既然会有多个线程同时操作这个队列，那么根据多线程程序的原则，我们一般需要对这个**队列加锁**，以免多线程竞争产生非预期的结果。当然，在技术上除了要解决线程池创建、向队列中投递任务、从队列中取任务并处理的问题，我们还需要做一些**善后工作，例如线程池的清理**，即如何退出线程池中的工作线程和清理任务队列，这也是线程池和任务队列的核心原理。
